--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 3000
-DB_URL = "host=localhost user=postgres password=postgres dbname=go-api-practice port=5432 sslmode=disable"
+DB_URL = "host=localhost user=postgres password=postgres dbname=go-crud-api port=5432 sslmode=disable"
